# aws-iot-cdk-app

./: 10result.json  README.md  ca.sh  customAuthorizerCfn.json  package-lock.json  package.json  todo.sh
functions/: .gitignore
functions/custom-authorizer/: Cargo.toml
functions/custom-authorizer/src/: main.rs
functions/disconnections/: Cargo.toml  event.json
functions/disconnections/src/: main.rs
functions/src/: main.rs
functions/stream-lambda/src/: main.rs
lib/: cdkv2-sam-lambda-rust-stack.ts  iot_custom_auth.ts  iot_disconnections.ts  iot_stream_proc.ts
